FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20130924:
AUTHOR: bapt@FreeBSD.org

  Stage aware ports can now create package without the requirement from
  being root.
  If a port really needs root anyway it should add NEED_ROOT in its
  Makefile.

  For a port that needs special credential on files DO NOT RELY on
  chown in post-install section but rely on @own, @group in pkg-plist
  Be careful about rights on directories as pkg_install cannot store them
  they needs to be done via @exec chown.

20130923:
AUTHOR: bapt@FreeBSD.org

  The ports tree is now staged by default. With pkgng the sequence hasn't
  changed, the main difference is that creating package is now independent
  from installing it. With pkg_install, the package is now created first
  and make install, do install the package.

  New macros:
  - STAGEDIR: PATH to the directory where the port will be staged.
  - NO_STAGE: Keep the old behaviour of the ports tree (aka no staging area)

  Unsupported macro if NO_STAGE is not set:
  - MAN* with staging man page compression and handling of hardlinks and
  symlinks is automatically done in the stage. the manpages becomes then a
  "normal" plist files and should be tracked in pkg-plist.
  - MANCOMPRESSED the compress-man target is able to only compress when it
  needed.

  New target:
  - stage: this installs everything into the stage directory
  - makeplist: this will create a pkg-plist and print it to stdout. This is
  a sample plist and it should always be _reviewed_ not directly used.

  NOTE: with staging only what is in the plist will be installed, nothing more,
  meaning a port staged cannot have leftovers except directories left. It is